--- a/MidasUML/MidasUML/MidasUML.vcxproj.filters
+++ b/MidasUML/MidasUML/MidasUML.vcxproj.filters
@@ -60,6 +60,9 @@
     <ClInclude Include="Util.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="SaveBMP.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="MidasUML.cpp">
@@ -96,6 +99,9 @@
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="Util.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="SaveBMP.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
