--- a/MidasUML/MidasUML/MidasUML.vcxproj
+++ b/MidasUML/MidasUML/MidasUML.vcxproj
@@ -196,6 +196,7 @@
     <ClInclude Include="MidasUMLDoc.h" />
     <ClInclude Include="MidasUMLView.h" />
     <ClInclude Include="Resource.h" />
+    <ClInclude Include="SaveBMP.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="Util.h" />
@@ -212,6 +213,7 @@
     <ClCompile Include="MidasUML.cpp" />
     <ClCompile Include="MidasUMLDoc.cpp" />
     <ClCompile Include="MidasUMLView.cpp" />
+    <ClCompile Include="SaveBMP.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
