MiDas UML ver 1.0.0 최종완료

--- a/MidasUML/MidasUML/MidasUML.rc
+++ b/MidasUML/MidasUML/MidasUML.rc
@@ -313,9 +313,42 @@ BEGIN
     LTEXT           "main Class",IDC_STATIC,63,30,38,10
     LTEXT           "sub Class",IDC_STATIC,123,30,38,10
     LTEXT           "관계",IDC_STATIC,179,30,38,10
-    COMBOBOX        IDC_COMBO1,61,44,42,12,CBS_DROPDOWN | CBS_SORT | WS_VSCROLL | WS_TABSTOP
-    COMBOBOX        IDC_COMBO2,117,44,42,12,CBS_DROPDOWN | CBS_SORT | WS_VSCROLL | WS_TABSTOP
-    COMBOBOX        IDC_COMBO3,168,44,42,12,CBS_DROPDOWN | CBS_SORT | WS_VSCROLL | WS_TABSTOP
+    COMBOBOX        IDC_COMBO1,61,44,42,12,CBS_DROPDOWN | WS_VSCROLL | WS_TABSTOP
+    COMBOBOX        IDC_COMBO2,117,44,42,12,CBS_DROPDOWN | WS_VSCROLL | WS_TABSTOP
+    COMBOBOX        IDC_COMBO3,168,44,42,12,CBS_DROPDOWN | WS_VSCROLL | WS_TABSTOP
+END
+
+IDD_EDIT DIALOGEX 0, 0, 287, 233
+STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
+CAPTION "클래스 편집"
+FONT 8, "MS Shell Dlg", 400, 0, 0x1
+BEGIN
+    DEFPUSHBUTTON   "확인",IDOK,159,212,50,14
+    PUSHBUTTON      "취소",2,222,212,50,14
+    LTEXT           "클래스 이름 :",IDC_STATIC,65,19,42,12
+    EDITTEXT        IDC_EDIT1,111,18,76,13,ES_AUTOHSCROLL
+    COMBOBOX        IDC_VAR_ACC,51,53,57,12,CBS_DROPDOWN | WS_VSCROLL | WS_TABSTOP
+    EDITTEXT        IDC_EDIT2,50,69,58,12,ES_AUTOHSCROLL
+    EDITTEXT        IDC_EDIT3,50,86,58,12,ES_AUTOHSCROLL
+    GROUPBOX        "변수 추가",IDC_STATIC,14,40,112,71
+    PUSHBUTTON      "추가",IDC_VAR_BUTTON,87,105,38,11
+    COMBOBOX        IDC_FUNC_ACC,50,128,57,12,CBS_DROPDOWN | CBS_SORT | WS_VSCROLL | WS_TABSTOP
+    EDITTEXT        IDC_EDIT4,50,145,58,12,ES_AUTOHSCROLL
+    EDITTEXT        IDC_EDIT5,50,183,58,12,ES_AUTOHSCROLL
+    GROUPBOX        "함수 추가",IDC_STATIC,15,116,112,93
+    EDITTEXT        IDC_EDIT6,49,165,58,12,ES_AUTOHSCROLL
+    PUSHBUTTON      "추가",IDC_BUTTON2,87,198,38,11
+    LTEXT           "접근 권한 ",IDC_STATIC,17,54,32,10
+    LTEXT           "이름",IDC_STATIC,17,70,32,10
+    LTEXT           "타입",IDC_STATIC,17,87,32,10
+    LTEXT           "이름",IDC_STATIC,17,147,32,10
+    LTEXT           "반환 타입",IDC_STATIC,17,185,32,10
+    LTEXT           "파라미터",IDC_STATIC,16,167,32,10
+    LTEXT           "접근 권한 ",IDC_STATIC,17,129,32,10
+    LISTBOX         IDC_LIST1,142,44,92,68,LBS_SORT | LBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_TABSTOP
+    LISTBOX         IDC_LIST5,142,122,92,84,LBS_SORT | LBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_TABSTOP
+    PUSHBUTTON      "삭제",IDC_BUTTON3,238,97,34,13
+    PUSHBUTTON      "삭제",IDC_BUTTON4,239,192,34,13
 END
 
 
@@ -389,6 +422,14 @@ BEGIN
         TOPMARGIN, 7
         BOTTOMMARGIN, 92
     END
+
+    IDD_EDIT, DIALOG
+    BEGIN
+        LEFTMARGIN, 7
+        RIGHTMARGIN, 280
+        TOPMARGIN, 7
+        BOTTOMMARGIN, 226
+    END
 END
 #endif    // APSTUDIO_INVOKED
 
@@ -404,6 +445,11 @@ BEGIN
 END
 
 IDD_ADD_ACCOS AFX_DIALOG_LAYOUT
+BEGIN
+    0
+END
+
+IDD_EDIT AFX_DIALOG_LAYOUT
 BEGIN
     0
 END
